@@ -4,12 +4,12 @@ package com.cometway.util;
 
 import com.cometway.util.*;
 import java.util.*;
-import org.apache.oro.text.perl.*;
+import java.util.regex.*;
 
 
 /**
  * This class provides static methods for quick and easy regular expression
- * matching and replacement. This class uses the org.apache.oro tools.
+ * matching and replacement. This class uses java.util.regex.
  */
 public class jGrep
 {		// protected static Perl5Util perl;
@@ -85,65 +85,41 @@ public class jGrep
 	}
 
 
-	public static IntegerPair indecesOf(String pattern, String content, boolean ignoreCase, Perl5Util perl)
-	{		// if(perl==null) {
-
-
-		// perl = new Perl5Util();
-		// }
-
-		char    divChar = '/';
-
-		if (pattern.indexOf(divChar) != -1)
-		{
-			divChar = '#';
-
-			if (pattern.indexOf(divChar) != -1)
-			{
-				divChar = '|';
-
-				if (pattern.indexOf(divChar) != -1)
-				{
-					divChar = ':';
-
-					if (pattern.indexOf(divChar) != -1)
-					{
-						divChar = '~';
-					}
+	public static IntegerPair indecesOf(String pattern, String content, boolean ignoreCase, Pattern compiledPattern)
+	{
+		try {
+			Pattern p = compiledPattern;
+			if (p == null) {
+				int flags = Pattern.MULTILINE;
+				if (ignoreCase) {
+					flags |= Pattern.CASE_INSENSITIVE;
 				}
+				p = Pattern.compile(pattern, flags);
 			}
-		}
-
-		if (ignoreCase)
-		{
-			if (perl.match("m" + divChar + pattern + divChar + "im", content))
-			{
-				return (new IntegerPair(perl.beginOffset(0), perl.endOffset(0)));
+			
+			Matcher matcher = p.matcher(content);
+			if (matcher.find()) {
+				return new IntegerPair(matcher.start(), matcher.end());
 			}
+		} catch (PatternSyntaxException e) {
+			// Invalid regex pattern, return null
 		}
-		else
-		{
-			if (perl.match("m" + divChar + pattern + divChar + "m", content))
-			{
-				return (new IntegerPair(perl.beginOffset(0), perl.endOffset(0)));
-			}
-		}
-
-		return (null);
+		
+		return null;
 	}
 
 
 	public static IntegerPair indecesOf(String pattern, String content, boolean ignoreCase)
 	{
-		return (indecesOf(pattern, content, ignoreCase, new Perl5Util()));
+		return (indecesOf(pattern, content, ignoreCase, null));
 	}
 
 
-	public static Vector grepText(String pattern, String content, boolean ignoreCase, Perl5Util perl)
+	public static Vector grepText(String pattern, String content, boolean ignoreCase, Pattern compiledPattern)
 	{
 		Vector		matches = new Vector();
 		int		offset = 0;
-		IntegerPair     pair = jGrep.indecesOf(pattern, content, ignoreCase, perl);
+		IntegerPair     pair = jGrep.indecesOf(pattern, content, ignoreCase, compiledPattern);
 
 		while (pair != null)
 		{
@@ -152,7 +128,7 @@ public class jGrep
 			matches.addElement(new IntegerPair(pair.firstInt() + offset, pair.secondInt() + offset));
 
 			offset = offset + pair.secondInt();
-			pair = jGrep.indecesOf(pattern, content, ignoreCase, perl);
+			pair = jGrep.indecesOf(pattern, content, ignoreCase, compiledPattern);
 		}
 
 		return (matches);
@@ -161,48 +137,34 @@ public class jGrep
 
 	public static Vector grepText(String pattern, String content, boolean ignoreCase)
 	{
-		return (grepText(pattern, content, ignoreCase, new Perl5Util()));
+		return (grepText(pattern, content, ignoreCase, null));
 	}
 
 
-	public static String grepAndReplaceText(String pattern, String replacementString, String content, boolean ignoreCase, Perl5Util perl)
+	public static String grepAndReplaceText(String pattern, String replacementString, String content, boolean ignoreCase, Pattern compiledPattern)
 	{
-		char    divChar = '/';
-
-		if ((pattern.indexOf(divChar) != -1) || (replacementString.indexOf(divChar) != -1))
-		{
-			divChar = '#';
-
-			if ((pattern.indexOf(divChar) != -1) || (replacementString.indexOf(divChar) != -1))
-			{
-				divChar = '|';
-
-				if ((pattern.indexOf(divChar) != -1) || (replacementString.indexOf(divChar) != -1))
-				{
-					divChar = ':';
-
-					if ((pattern.indexOf(divChar) != -1) || (replacementString.indexOf(divChar) != -1))
-					{
-						divChar = '~';
-					}
+		try {
+			Pattern p = compiledPattern;
+			if (p == null) {
+				int flags = 0;
+				if (ignoreCase) {
+					flags |= Pattern.CASE_INSENSITIVE;
 				}
+				p = Pattern.compile(pattern, flags);
 			}
-		}
-
-		if (ignoreCase)
-		{
-			return (perl.substitute("s" + divChar + pattern + divChar + replacementString + divChar + "gi", content));
-		}
-		else
-		{
-			return (perl.substitute("s" + divChar + pattern + divChar + replacementString + divChar + "g", content));
+			
+			Matcher matcher = p.matcher(content);
+			return matcher.replaceAll(replacementString);
+		} catch (PatternSyntaxException e) {
+			// Invalid regex pattern, return original content
+			return content;
 		}
 	}
 
 
 	public static String grepAndReplaceText(String pattern, String replacementString, String content, boolean ignoreCase)
 	{
-		return (grepAndReplaceText(pattern, replacementString, content, ignoreCase, new Perl5Util()));
+		return (grepAndReplaceText(pattern, replacementString, content, ignoreCase, null));
 	}
 
 
@@ -234,7 +196,7 @@ public class jGrep
 		{
 			count++;
 
-			Integer temp = new Integer(index);
+			Integer temp = Integer.valueOf(index);
 
 			i.addElement(temp);
 
